Trying to fix consul